Fix overflow in irb print

--- a/sass/custom/_print.scss
+++ b/sass/custom/_print.scss
@@ -107,4 +107,8 @@
   .terminal {
     overflow-x: hidden;
   }
+
+  .irb {
+    overflow-x: hidden;
+  }
 }
